--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@ layout: default
 title: Home
 ---
 
-# My Math Notes
+<h1>My Math Notes</h1>
 
-- [First post](./posts/2026-01-27-hermite-irrationality.html)
+<ul>
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+      <small>{{ post.date | date: "%Y-%m-%d" }}</small>
+    </li>
+  {% endfor %}
+</ul>
